<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Handy</string>
    <string name="action_settings">Settings</string>
    <string name="action_add">Add</string>
    <string name="status">Running Status</string>
    <string name="stopped">Stopped</string>
    <string name="running">Running</string>
    <string name="title_activity_setting">Settings</string>
    <string name="prompt_number">Number</string>
    <string name="prompt_name">Name</string>
    <string name="add_controller">Add</string>
    <string name="cancel">Cancel</string>
    <string name="controller_list">Controllers List</string>
    <string name="qr_add_controller">QR</string>
    <string name="permission_call">Call Permission</string>
    <string name="permission_open">Open Permission</string>
    <string name="permission_system">System Permission</string>
    <string name="permission_gps">GPS Permission</string>
    <string name="permission_alarm">Alarm Permission</string>
    <string name="permission_contact">Contact Permission</string>
    <string name="permission_sms">SMS Permisssion</string>
    <string name="record_phonenumber">Phone Number</string>
    <string name="record_date">Date</string>
    <string name="record_content">SMS Content</string>
    
    <string name="loadTitle"><strong>正在更新数据</strong></string>
    <string name="loadContent"><strong>请稍候……</strong></string>
	<string name="login_login">登陆</string>
    <string name="login_hint_password">输入密码</string>
    <string name="login_hint_name">输入用户名</string>
    <string name="scan_text">将二维码放入框内, 即可自动扫描</string>
    <string name="device_group">设备组</string>

</resources>
