<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/record_dialog"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:paddingTop="30dp">

	<TextView android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:textColor="#372c24"
             android:text="@string/record_phonenumber"/>
	
    <EditText android:id="@+id/record_phonenumber_textedit"
          android:layout_width="fill_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="5dp"
          android:layout_marginBottom="10dp"
          android:singleLine="true"
          android:enabled="false"/>
    
    <TextView android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:textColor="#372c24"
             android:text="@string/record_date"/>
	
    <EditText android:id="@+id/record_date_textedit" 
          android:layout_width="fill_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="5dp"
          android:layout_marginBottom="10dp"
          android:singleLine="true"
          android:enabled="false"/>
    
    <TextView android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:textColor="#372c24"
             android:text="@string/record_content"/>
	
    <EditText android:id="@+id/record_content_textedit"
          android:layout_width="fill_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="5dp"
          android:layout_marginBottom="10dp"
          android:enabled="false"/>
    


</LinearLayout>


