<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="cn.edu.nwpu.handy.SettingActivity" >
    
	<RelativeLayout 
	    android:orientation="horizontal"
	    android:layout_width="match_parent" 
	    android:layout_height="30dp" 
	    android:layout_marginBottom="10dp">	    
	    
	   	<TextView
	   	    android:layout_width="wrap_content"
	   	    android:layout_height="wrap_content"
	   	    android:text="@string/controller_list" 
	   	    android:layout_alignParentLeft="true"
	   	    android:layout_alignParentBottom="true"
	   	    android:textColor="#000"  
            android:textSize="20sp"/>
	   	<Button
	   	    android:id="@+id/add_controller_btn"
	   	    android:layout_width="wrap_content"
	   	    android:layout_height="match_parent"
	   	    android:text="@string/add_controller" 
	   	    android:layout_alignParentRight="true"
	   	    android:layout_alignParentBottom="true"
	   	    android:gravity="center_horizontal"
	   	    android:textSize="12sp"/>
	   	<Button
	   	    android:id="@+id/qr_add_btn"
	   	    android:layout_width="wrap_content"
	   	    android:layout_height="match_parent"
	   	    android:text="@string/qr_add_controller" 
	   	    android:layout_toLeftOf="@id/add_controller_btn"
	   	    android:gravity="center_horizontal"
	   	    android:textSize="12sp"/>
	</RelativeLayout>
   
   <ListView 
      	android:id="@+id/controllers"  
        android:layout_width="match_parent"  
        android:cacheColorHint="#00000000"   
        android:paddingBottom="10dp" 
        android:layout_height="match_parent"  
        android:transcriptMode="alwaysScroll"  >  
 
    </ListView>

</LinearLayout>
